# network_simulation

./: 1.cpp  CMakeLists.txt  Makefile  run_simulations.sh
DRAMsim3-master/: .trace_out_file.txt.swp  Makefile  dramsim3.json  dramsim3.txt  trace_out_file.txt
DRAMsim3-master/configs/: .DDR4_4Gb_x8_1866.ini.swp  HBM2_4Gb_x128.ini  HBM2_8Gb_x128.ini
DRAMsim3-master/src/: configuration.cc  controller.cc  cpu.cc  cpu.h  dram_system.cc  main.cc  memory_system.cc  memory_system.h
DRAMsim3-master/test/: dramsim3.json  dramsim3.txt  dramsim3epoch.json
doc/: readme.md
src/: main.cpp
src/buffer/: UpBuffer.cpp  UpBuffer.h  buffer.cpp  buffer.h
src/common/: common.h  debug.cpp  debug.h  define.h  object.cpp  object.h  packet.h  port.cpp  port.h  timing.cpp  timing.h
src/dram/: #include "dram_arb.c  dram.cpp  dram.h  dram_arb.cpp  dram_arb.h  dramsim3.cpp  dramsim3.h  dramsim3_wrapper.cpp  dramsim3_wrapper.h
src/event/: Simulator.cpp  Simulator.h  eventq.cpp  eventq.h
src/probe/: Listenervoid.h  named.h  probe.cpp  probe.h
